--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,17 @@
 
 buildscript {
     repositories {
+        jcenter() { url "https://jcenter.bintray.com" }
+        maven { url "https://jitpack.io" }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        mavenCentral()
         google()
-        jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,8 +21,13 @@ buildscript {
 
 allprojects {
     repositories {
+        jcenter() { url "https://jcenter.bintray.com" }
+        maven { url "https://jitpack.io" }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        mavenCentral()
         google()
-        jcenter()
         
     }
 }
