--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.google.code.gson:gson:2.8.5'
 
-
-
+    // okhttp logging interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
 }
